--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #f6f6f6;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#main {
+  margin: 0 30px;
+}
+
+@layer components {
+  body {
+    @apply font-light;
+  }
+  .content {
+    min-height: 600px;
+    @apply my-16;
+  }
+  input[type=email], input[type=password] {
+    @apply p-1;
+  }
+  .nav--item {
+    @apply px-6 py-5 text-lg cursor-pointer hover:text-white hover:bg-black;
+  }
+}
+
+#header {
+  padding: 30px 0;
+  margin: 0;
+  background-color: #3a718a;
+  color: white;
+}
+
+.navigation {
+  border-bottom: 1px solid gray;
+}
+
+#footer {
+  padding: 30px 0;
+  margin: 0;
+  border-top: 1px solid #AAA;
+  background-color: #3a718a;
+  color: white;
+}
+
+.page-content {
+  min-height: 600px;
+  padding: 50px;
+}
+
+.page-content--home {
+  min-height: 600px;
+}
+
+.home--banner {
+  min-height: 400px;
+  background-color: lightgray;
 }
